--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 futures = "0.3.27"
 reqwest = {version = "0.11.15", features = ["json"]}
+serde = {version = "1.0.158", features = ["derive"]}
 serde_json = "1.0.94"
 tokio = {version = "1.26.0", features = ["full"]}
