--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ futures = "0.3.27"
 reqwest = {version = "0.11.15", features = ["json"]}
 serde = {version = "1.0.158", features = ["derive"]}
 serde_json = "1.0.94"
+strum = { version = "0.24.1", features = ["derive","strum_macros"] }
 tokio = {version = "1.26.0", features = ["full"]}
