--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.24"
+clap = { version = "4.2.1", features = ["derive"] }
 futures = "0.3.27"
 reqwest = {version = "0.11.15", features = ["json"]}
 serde = {version = "1.0.158", features = ["derive"]}
