--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde = {version = "1.0.158", features = ["derive"]}
 serde_json = "1.0.94"
 strum = { version = "0.24.1", features = ["derive","strum_macros"] }
 tokio = {version = "1.26.0", features = ["full"]}
+tokio-stream = "0.1.12"
