--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.6.18"
 chrono ={ version = "0.4.24", default-features = false, features = ["serde","clock"] }
 clap = { version = "4.2.1", features = ["derive"] }
 futures = "0.3.27"
