--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.81"
 axum = "0.6.18"
 chrono ={ version = "0.4.24", default-features = false, features = ["serde","clock"] }
 clap = { version = "4.2.1", features = ["derive"] }
+dirs = "5.0.1"
 futures = "0.3.27"
 reqwest = {version = "0.11.15", features = ["json"]}
 serde = {version = "1.0.158", features = ["derive"]}
