--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.81"
 chrono ={ version = "0.4.24", default-features = false, features = ["serde","clock"] }
 clap = { version = "4.2.1", features = ["derive"] }
+comfy-table = "7.1.1"
 dirs = "5.0.1"
 futures = "0.3.27"
 reqwest = {version = "0.11.15", features = ["json"]}
